fixed ticket content by adding overflow-wrap: anywhere;

--- a/src/styles/components/_ticket-details.scss
+++ b/src/styles/components/_ticket-details.scss
@@ -100,6 +100,7 @@
             padding-right: 220px;
             overflow-y: auto;
             flex-grow: 1;
+            overflow-wrap: anywhere;
             // padding-inline-start: rem(16px);
 
             .ticket-content-top {
